# wdXsaY

./: .gitignore  Dockerfile  Makefile  README.md  bun.lockb  docker-compose.yml  generate_vectorstore.py  index.py  insight_pipeline.py  next.config.js  package.json  pyproject.toml  requirements.txt  vercel.json
api/: Dockerfile  Makefile  README.md  generate_vectorstore.py  gfirebase.py  gstorage.py  index.py  insight_pipeline.py  pyproject.toml  requirements.txt
api/api/vectorstores/faiss_index_clean_code_spacy_splitter/: index.faiss  index.pkl
api/local_storage/: README.md
api/vectorstores/faiss_index_clean_code_spacy_splitter/: index.faiss  index.pkl
app/: page.tsx
app/(routes)/: page.tsx
app/(routes)/aboutme/: page.tsx
client/: bun.lockb  package.json
client/app/: page.tsx
faiss_index_clean_code/: index.pkl
frontend/: Dockerfile  Makefile  README.md  bun.lockb  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/(routes)/: page.tsx
frontend/components/: AnswerSection.tsx  FileUpload.tsx  LoadingIcon.tsx  answerSection.tsx
