[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Anand Tyagi <anand.deep.tyagi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn[standard]==0.23.2


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
